add project draft, encoder, decoder, enc-dec

--- a/notebooks/decoder.ipynb
+++ b/notebooks/decoder.ipynb
@@ -2,24 +2,376 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
-    "module_path = \"../\"\n",
+    "module_path = \"../src\"\n",
     "\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "from dataset import get_dataset\n",
+    "dataset = get_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load libraries\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments, AutoConfig\n",
+    "import torch\n",
+    "\n",
+    "model_name = 'gpt2'\n",
+    "epochs = 3\n",
+    "num_labels = 4\n",
+    "batch_size = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b3ce337be3346bcbfd77773ac97941d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/7600 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Define tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name, model_max_length=256)\n",
+    "\n",
+    "# check which one is required\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
+    "def tokenize(input):\n",
+    "    return tokenizer(input['text'], padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "# Tokenize dataset\n",
+    "tokenized_dataset = dataset.map(tokenize, batched=True)\n",
+    "\n",
+    "# Shuffle and pick subset from dataset\n",
+    "train_dataset = tokenized_dataset['train'].shuffle(seed=442333+424714).select(range(5000))\n",
+    "eval_dataset = tokenized_dataset['test'].shuffle(seed=442333+424714).select(range(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import evaluate\n",
+    "import numpy as np\n",
+    "metric = evaluate.load(\"accuracy\")\n",
+    "\n",
+    "# Prepare evaluation callback, metric = accuracy\n",
+    "def compute_metrics(eval_pred):\n",
+    "  logits, labels = eval_pred\n",
+    "  predictions = np.argmax(logits, axis=-1)\n",
+    "  return metric.compute(predictions=predictions, references=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define custom classification head, 2 layers deep\n",
+    "\n",
+    "class CustomClassificationHead(torch.nn.Module):\n",
+    "    def __init__(self, input_dim, num_labels):\n",
+    "        super().__init__()\n",
+    "        self.dense = torch.nn.Linear(input_dim, 512)\n",
+    "        self.dense2nd = torch.nn.Linear(512, 256)\n",
+    "        self.dropout = torch.nn.Dropout(0.2)\n",
+    "        self.out_proj = torch.nn.Linear(256, num_labels)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.dense(x)\n",
+    "        x = torch.tanh(x)\n",
+    "        x = self.dense2nd(x)\n",
+    "        x = torch.tanh(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.out_proj(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of GPT2ForSequenceClassification were not initialized from the model checkpoint at gpt2 and are newly initialized: ['score.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create model\n",
+    "config = AutoConfig.from_pretrained(model_name, num_labels=num_labels)\n",
+    "model =  AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=num_labels)\n",
+    "\n",
+    "model.config.pad_token_id = model.config.eos_token_id\n",
+    "# Connect new classfier to model\n",
+    "model.transformer.add_module(\"classifier\", CustomClassificationHead(config.n_embd, config.num_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_args = TrainingArguments(\n",
+    "    output_dir='./results',\n",
+    "    num_train_epochs=epochs,\n",
+    "    per_device_train_batch_size=batch_size,\n",
+    "    evaluation_strategy=\"epoch\"\n",
+    ")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=eval_dataset,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_024805-gl4r92xu</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/huggingface/runs/gl4r92xu' target=\"_blank\">jumping-moon-4</a></strong> to <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/kpierzynski/huggingface/runs/gl4r92xu' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface/runs/gl4r92xu</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [471/471 02:53, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.299594</td>\n",
+       "      <td>0.910000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.280762</td>\n",
+       "      <td>0.916000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.280154</td>\n",
+       "      <td>0.915000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=471, training_loss=0.2876964010250796, metrics={'train_runtime': 176.7944, 'train_samples_per_second': 84.844, 'train_steps_per_second': 2.664, 'total_flos': 1971881994240000.0, 'train_loss': 0.2876964010250796, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPT2ForSequenceClassification(\n",
+      "  (transformer): GPT2Model(\n",
+      "    (wte): Embedding(50257, 768)\n",
+      "    (wpe): Embedding(1024, 768)\n",
+      "    (drop): Dropout(p=0.1, inplace=False)\n",
+      "    (h): ModuleList(\n",
+      "      (0-11): 12 x GPT2Block(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "        (attn): GPT2Attention(\n",
+      "          (c_attn): Conv1D()\n",
+      "          (c_proj): Conv1D()\n",
+      "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+      "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+      "        )\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "        (mlp): GPT2MLP(\n",
+      "          (c_fc): Conv1D()\n",
+      "          (c_proj): Conv1D()\n",
+      "          (act): NewGELUActivation()\n",
+      "          (dropout): Dropout(p=0.1, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "    (classifier): CustomClassificationHead(\n",
+      "      (dense): Linear(in_features=768, out_features=512, bias=True)\n",
+      "      (dense2nd): Linear(in_features=512, out_features=256, bias=True)\n",
+      "      (dropout): Dropout(p=0.2, inplace=False)\n",
+      "      (out_proj): Linear(in_features=256, out_features=4, bias=True)\n",
+      "    )\n",
+      "  )\n",
+      "  (score): Linear(in_features=768, out_features=4, bias=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
