--- a/notebooks/encoder-decoder.ipynb
+++ b/notebooks/encoder-decoder.ipynb
@@ -2,24 +2,477 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
-    "module_path = \"../\"\n",
+    "module_path = \"../src\"\n",
     "\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "from dataset import get_dataset\n",
+    "dataset = get_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading libraries\n",
+    "from transformers import Trainer, TrainingArguments, AutoTokenizer, AutoModelForSequenceClassification\n",
+    "\n",
+    "model_name = 't5-large'\n",
+    "num_labels = 4\n",
+    "epochs = 3\n",
+    "batch_size = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49b8d77abdf9439cb664d27b41d91cfa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/7600 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name, model_max_length=128)\n",
+    "\n",
+    "def tokenize(input):\n",
+    "    return tokenizer(input['text'], padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "# Tokenize, Shuffle and Pick dataset\n",
+    "tokenized_dataset = dataset.map(tokenize, batched=True)\n",
+    "train_dataset = tokenized_dataset['train'].shuffle(seed=442333+424714).select(range(5000))\n",
+    "eval_dataset = tokenized_dataset['test'].shuffle(seed=442333+424714).select(range(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of T5ForSequenceClassification were not initialized from the model checkpoint at t5-large and are newly initialized: ['classification_head.dense.bias', 'classification_head.dense.weight', 'classification_head.out_proj.bias', 'classification_head.out_proj.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create model\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=num_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Freezing all layers except last n of encoder and decoder parts of the transformer:\n",
+    "n = 3\n",
+    "\n",
+    "for i in range(0, len(model.transformer.encoder.block) - n, 1):\n",
+    "    for param in model.transformer.encoder.block[i].parameters():\n",
+    "        param.requires_grad = False\n",
+    "\n",
+    "for i in range(0, len(model.transformer.decoder.block) - n, 1):\n",
+    "    for param in model.transformer.decoder.block[i].parameters():\n",
+    "        param.requires_grad = False\n",
+    "\n",
+    "# Function to print layers and their state\n",
+    "def print_named_parameters_freezing_state():\n",
+    "    for name, param in model.named_parameters():\n",
+    "        print(name, \"Freezed\" if param.requires_grad == False else \"Unfreezed\")\n",
+    "\n",
+    "#print_named_parameters_freezing_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import evaluate\n",
+    "import numpy as np\n",
+    "\n",
+    "metric = evaluate.load(\"accuracy\")\n",
+    "\n",
+    "# Accuracy metric\n",
+    "def compute_metrics(p):\n",
+    "    predictions, labels = p.predictions, p.label_ids\n",
+    "\n",
+    "    predictions = np.asarray(predictions[0])\n",
+    "    predictions = predictions.reshape(-1, predictions.shape[-1])\n",
+    "    predictions = np.argmax(predictions, axis=-1)\n",
+    "\n",
+    "    return metric.compute(predictions=predictions, references=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_args = TrainingArguments(\n",
+    "    output_dir='./results',\n",
+    "    num_train_epochs=epochs,\n",
+    "    per_device_train_batch_size=batch_size,\n",
+    "    evaluation_strategy='epoch'\n",
+    ")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=eval_dataset,\n",
+    "    compute_metrics=compute_metrics\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_025530-1uh1uyv4</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/huggingface/runs/1uh1uyv4' target=\"_blank\">frosty-pond-6</a></strong> to <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/kpierzynski/huggingface/runs/1uh1uyv4' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface/runs/1uh1uyv4</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [471/471 07:28, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.357388</td>\n",
+       "      <td>0.902000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.314651</td>\n",
+       "      <td>0.909000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.306663</td>\n",
+       "      <td>0.907000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=471, training_loss=0.3972011493269805, metrics={'train_runtime': 452.6575, 'train_samples_per_second': 33.138, 'train_steps_per_second': 1.041, 'total_flos': 8131065984000000.0, 'train_loss': 0.3972011493269805, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T5ForSequenceClassification(\n",
+      "  (transformer): T5Model(\n",
+      "    (shared): Embedding(32128, 1024)\n",
+      "    (encoder): T5Stack(\n",
+      "      (embed_tokens): Embedding(32128, 1024)\n",
+      "      (block): ModuleList(\n",
+      "        (0): T5Block(\n",
+      "          (layer): ModuleList(\n",
+      "            (0): T5LayerSelfAttention(\n",
+      "              (SelfAttention): T5Attention(\n",
+      "                (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (relative_attention_bias): Embedding(32, 16)\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "            (1): T5LayerFF(\n",
+      "              (DenseReluDense): T5DenseActDense(\n",
+      "                (wi): Linear(in_features=1024, out_features=4096, bias=False)\n",
+      "                (wo): Linear(in_features=4096, out_features=1024, bias=False)\n",
+      "                (dropout): Dropout(p=0.1, inplace=False)\n",
+      "                (act): ReLU()\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "          )\n",
+      "        )\n",
+      "        (1-23): 23 x T5Block(\n",
+      "          (layer): ModuleList(\n",
+      "            (0): T5LayerSelfAttention(\n",
+      "              (SelfAttention): T5Attention(\n",
+      "                (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "            (1): T5LayerFF(\n",
+      "              (DenseReluDense): T5DenseActDense(\n",
+      "                (wi): Linear(in_features=1024, out_features=4096, bias=False)\n",
+      "                (wo): Linear(in_features=4096, out_features=1024, bias=False)\n",
+      "                (dropout): Dropout(p=0.1, inplace=False)\n",
+      "                (act): ReLU()\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "          )\n",
+      "        )\n",
+      "      )\n",
+      "      (final_layer_norm): T5LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (decoder): T5Stack(\n",
+      "      (embed_tokens): Embedding(32128, 1024)\n",
+      "      (block): ModuleList(\n",
+      "        (0): T5Block(\n",
+      "          (layer): ModuleList(\n",
+      "            (0): T5LayerSelfAttention(\n",
+      "              (SelfAttention): T5Attention(\n",
+      "                (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (relative_attention_bias): Embedding(32, 16)\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "            (1): T5LayerCrossAttention(\n",
+      "              (EncDecAttention): T5Attention(\n",
+      "                (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "            (2): T5LayerFF(\n",
+      "              (DenseReluDense): T5DenseActDense(\n",
+      "                (wi): Linear(in_features=1024, out_features=4096, bias=False)\n",
+      "                (wo): Linear(in_features=4096, out_features=1024, bias=False)\n",
+      "                (dropout): Dropout(p=0.1, inplace=False)\n",
+      "                (act): ReLU()\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "          )\n",
+      "        )\n",
+      "        (1-23): 23 x T5Block(\n",
+      "          (layer): ModuleList(\n",
+      "            (0): T5LayerSelfAttention(\n",
+      "              (SelfAttention): T5Attention(\n",
+      "                (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "            (1): T5LayerCrossAttention(\n",
+      "              (EncDecAttention): T5Attention(\n",
+      "                (q): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (k): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (v): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "                (o): Linear(in_features=1024, out_features=1024, bias=False)\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "            (2): T5LayerFF(\n",
+      "              (DenseReluDense): T5DenseActDense(\n",
+      "                (wi): Linear(in_features=1024, out_features=4096, bias=False)\n",
+      "                (wo): Linear(in_features=4096, out_features=1024, bias=False)\n",
+      "                (dropout): Dropout(p=0.1, inplace=False)\n",
+      "                (act): ReLU()\n",
+      "              )\n",
+      "              (layer_norm): T5LayerNorm()\n",
+      "              (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            )\n",
+      "          )\n",
+      "        )\n",
+      "      )\n",
+      "      (final_layer_norm): T5LayerNorm()\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "  )\n",
+      "  (classification_head): T5ClassificationHead(\n",
+      "    (dense): Linear(in_features=1024, out_features=1024, bias=True)\n",
+      "    (dropout): Dropout(p=0.0, inplace=False)\n",
+      "    (out_proj): Linear(in_features=1024, out_features=4, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
