--- a/notebooks/encoder.ipynb
+++ b/notebooks/encoder.ipynb
@@ -2,22 +2,421 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "\n",
-    "module_path = \"../\"\n",
+    "module_path = \"../src\"\n",
     "\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "from dataset import get_dataset\n",
+    "dataset = get_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load libraries\n",
+    "from transformers import Trainer, TrainingArguments, AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "model_name = 'roberta-base'\n",
+    "batch_size = 32\n",
+    "epochs = 5\n",
+    "num_labels = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "\n",
+    "def tokenize(input):\n",
+    "  return tokenizer(input['text'], padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "# Tokenize dataset\n",
+    "tokenized_dataset = dataset.map(tokenize, batched=True)\n",
+    "\n",
+    "# Shuffle and pick subset from dataset\n",
+    "train_dataset = tokenized_dataset['train'].shuffle(seed=442333+424714).select(range(5000))\n",
+    "eval_dataset = tokenized_dataset['test'].shuffle(seed=442333+424714).select(range(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import evaluate\n",
+    "import numpy as np\n",
+    "metric = evaluate.load(\"accuracy\")\n",
+    "\n",
+    "# Prepare evaluation callback, metric = accuracy\n",
+    "def compute_metrics(eval_pred):\n",
+    "  logits, labels = eval_pred\n",
+    "  predictions = np.argmax(logits, axis=-1)\n",
+    "  return metric.compute(predictions=predictions, references=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure LoRA\n",
+    "from peft import LoraConfig, TaskType\n",
+    "\n",
+    "lora_config = LoraConfig(\n",
+    "    # r = 8\n",
+    "    task_type=TaskType.SEQ_CLS, r=8, lora_alpha=1, lora_dropout=0.1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define custom classification head with smaller layer and changed activation function to relu\n",
+    "class RobertaClassificationHead(nn.Module):\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__()\n",
+    "        self.dense = nn.Linear(config.hidden_size, config.hidden_size//2) # smaller size\n",
+    "        classifier_dropout = (\n",
+    "            config.classifier_dropout if config.classifier_dropout is not None else config.hidden_dropout_prob\n",
+    "        )\n",
+    "        self.dropout = nn.Dropout(classifier_dropout)\n",
+    "        self.out_proj = nn.Linear(config.hidden_size//2, config.num_labels)\n",
+    "\n",
+    "    def forward(self, features, **kwargs):\n",
+    "        x = features[:, 0, :]  # take <s> token (equiv. to [CLS])\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.dense(x)\n",
+    "        x = torch.relu(x) # different activation function\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.out_proj(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at roberta-base and are newly initialized: ['classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create model\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=num_labels)\n",
+    "model.classifier = RobertaClassificationHead(model.config) # replace classifer\n",
+    "\n",
+    "from peft import get_peft_model\n",
+    "model = get_peft_model(model, lora_config) # setup lora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_args = TrainingArguments(\n",
+    "    output_dir='./results',\n",
+    "    num_train_epochs=epochs,\n",
+    "    per_device_train_batch_size=batch_size,\n",
+    "    evaluation_strategy=\"epoch\"\n",
+    ")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=eval_dataset,\n",
+    "    compute_metrics=compute_metrics,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_022143-dw7oxmem</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/huggingface/runs/dw7oxmem' target=\"_blank\">wild-totem-3</a></strong> to <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/kpierzynski/huggingface/runs/dw7oxmem' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface/runs/dw7oxmem</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='785' max='785' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [785/785 07:42, Epoch 5/5]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>1.349146</td>\n",
+       "      <td>0.636000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>1.240878</td>\n",
+       "      <td>0.855000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.746952</td>\n",
+       "      <td>0.882000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1.212400</td>\n",
+       "      <td>0.413322</td>\n",
+       "      <td>0.885000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1.212400</td>\n",
+       "      <td>0.388902</td>\n",
+       "      <td>0.888000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=785, training_loss=0.9423960886183818, metrics={'train_runtime': 466.5304, 'train_samples_per_second': 53.587, 'train_steps_per_second': 1.683, 'total_flos': 6600544051200000.0, 'train_loss': 0.9423960886183818, 'epoch': 5.0})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "trainable params: 591,748 || all params: 124,943,624 || trainable%: 0.4736120028021598\n",
+      "PeftModelForSequenceClassification(\n",
+      "  (base_model): LoraModel(\n",
+      "    (model): RobertaForSequenceClassification(\n",
+      "      (roberta): RobertaModel(\n",
+      "        (embeddings): RobertaEmbeddings(\n",
+      "          (word_embeddings): Embedding(50265, 768, padding_idx=1)\n",
+      "          (position_embeddings): Embedding(514, 768, padding_idx=1)\n",
+      "          (token_type_embeddings): Embedding(1, 768)\n",
+      "          (LayerNorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "          (dropout): Dropout(p=0.1, inplace=False)\n",
+      "        )\n",
+      "        (encoder): RobertaEncoder(\n",
+      "          (layer): ModuleList(\n",
+      "            (0-11): 12 x RobertaLayer(\n",
+      "              (attention): RobertaAttention(\n",
+      "                (self): RobertaSelfAttention(\n",
+      "                  (query): lora.Linear(\n",
+      "                    (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+      "                    (lora_dropout): ModuleDict(\n",
+      "                      (default): Dropout(p=0.1, inplace=False)\n",
+      "                    )\n",
+      "                    (lora_A): ModuleDict(\n",
+      "                      (default): Linear(in_features=768, out_features=8, bias=False)\n",
+      "                    )\n",
+      "                    (lora_B): ModuleDict(\n",
+      "                      (default): Linear(in_features=8, out_features=768, bias=False)\n",
+      "                    )\n",
+      "                    (lora_embedding_A): ParameterDict()\n",
+      "                    (lora_embedding_B): ParameterDict()\n",
+      "                  )\n",
+      "                  (key): Linear(in_features=768, out_features=768, bias=True)\n",
+      "                  (value): lora.Linear(\n",
+      "                    (base_layer): Linear(in_features=768, out_features=768, bias=True)\n",
+      "                    (lora_dropout): ModuleDict(\n",
+      "                      (default): Dropout(p=0.1, inplace=False)\n",
+      "                    )\n",
+      "                    (lora_A): ModuleDict(\n",
+      "                      (default): Linear(in_features=768, out_features=8, bias=False)\n",
+      "                    )\n",
+      "                    (lora_B): ModuleDict(\n",
+      "                      (default): Linear(in_features=8, out_features=768, bias=False)\n",
+      "                    )\n",
+      "                    (lora_embedding_A): ParameterDict()\n",
+      "                    (lora_embedding_B): ParameterDict()\n",
+      "                  )\n",
+      "                  (dropout): Dropout(p=0.1, inplace=False)\n",
+      "                )\n",
+      "                (output): RobertaSelfOutput(\n",
+      "                  (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+      "                  (LayerNorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "                  (dropout): Dropout(p=0.1, inplace=False)\n",
+      "                )\n",
+      "              )\n",
+      "              (intermediate): RobertaIntermediate(\n",
+      "                (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+      "                (intermediate_act_fn): GELUActivation()\n",
+      "              )\n",
+      "              (output): RobertaOutput(\n",
+      "                (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+      "                (LayerNorm): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "                (dropout): Dropout(p=0.1, inplace=False)\n",
+      "              )\n",
+      "            )\n",
+      "          )\n",
+      "        )\n",
+      "      )\n",
+      "      (classifier): ModulesToSaveWrapper(\n",
+      "        (original_module): RobertaClassificationHead(\n",
+      "          (dense): Linear(in_features=768, out_features=384, bias=True)\n",
+      "          (dropout): Dropout(p=0.1, inplace=False)\n",
+      "          (out_proj): Linear(in_features=384, out_features=4, bias=True)\n",
+      "        )\n",
+      "        (modules_to_save): ModuleDict(\n",
+      "          (default): RobertaClassificationHead(\n",
+      "            (dense): Linear(in_features=768, out_features=384, bias=True)\n",
+      "            (dropout): Dropout(p=0.1, inplace=False)\n",
+      "            (out_proj): Linear(in_features=384, out_features=4, bias=True)\n",
+      "          )\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.print_trainable_parameters()\n",
+    "print(model)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp-dl",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -35,5 +434,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
